# coupled_jj

./: .gitignore  CODE_CHANGES_BEFORE_AFTER.md  EVAL_CONVERGENCE_ANALYSIS.md  FIXES_SUMMARY.md  NORMALIZED_LOSS_GUIDE.md  QUICK_FIX_CHECKLIST.md  QUICK_START_EVAL_FIX.md  TRAINING_FIX_GUIDE.md  VAL_LOSS_DIAGNOSIS.md  coupled_junction.py  draw_coupledjj.py  energy_sde_model.pth  goal.md  josephson_junction_NSDE_learning_v2.py  josephson_junction_param_learning.py  josephson_junction_param_learning.pybackup  josephson_junction_param_learning_v2.py  josephson_junction_param_learning_v3.py  josephson_junction_param_learning_v4.py  josephson_junction_param_learning_v5.py  josephson_junction_param_learning_v6.py  neural_josephson_sde.pt  ou_process_neural_sde.py  pyproject.toml  simple OU process - Neural SDE.ipynb  test.ipynb  test_v4_quick.py  typical subs - Neural SDE.ipynb
3_new_python_code/: README.md  activations.py  config.py  dataset.py  losses.py  main.py  models.py  trainer.py  utils.py  visualization.py
cjj_contrast/: data_gen.py  dataloader.py  main.py  models.py  train_and_test.py  utils.py
data/josephson/penn_josephson/: final_results.pkl
data/josephson/penn_josephson_v3/: final_results.pkl
dynamics_analysis/: draw_coupledjj.py  fix_cycle.ipynb  fix_cycle.py  fix_points.py
img_results/260306_NSDE_moment/: neural_josephson_sde.pt
img_results/260306_NSDE_mse+kl/: neural_josephson_sde.pt
img_results/260306_NeuralSDECoupledJJ_test1/: neural_josephson_sde.pt
koopman/: koopman-demo.py
multi-equilibria/: bistable_energy_sde.py  energy_sde_model.pth
(+26 files in other folders)
