[project]
name = "CoupledJJ"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "ipykernel>=7.1.0",
    "matplotlib>=3.10.8",
    "matplotlib-stubs>=0.3.11",
    "numba>=0.62.1",
    "numpy>=2.2.6",
    "scikit-learn>=1.7.2",
    "scipy>=1.15.3",
    "sdeint>=0.3.0",
    "seaborn>=0.13.2",
    "sympy>=1.14.0",
    "torch>=2.10.0",
    "torchcde>=0.2.5",
    "torchsde>=0.2.6",
    "torchvision>=0.25.0",
    "tqdm>=4.67.1",
    "wandb>=0.26.0",
]


[[tool.uv.index]]
name = "pytorch-cu130"
url = "https://download.pytorch.org/whl/cu130"
explicit = true

[tool.uv.sources]
torch = [
  { index = "pytorch-cu130", marker = "sys_platform == 'win32'" },
]
torchvision = [
  { index = "pytorch-cu130", marker = "sys_platform == 'win32'" },
]
